test/errors/type/collections/set/__bor2.yasl
echo collections.set().__bor(1, collections.set())
